--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,157 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aliceblue;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.section-center {
+  width: 500px;
+  padding: 2rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 3px;
+}
+
+form {
+  width: 100%;
+}
+
+form h2 {
+  font-size: 1.3rem;
+  text-align: center;
+  margin-bottom: 1.3rem;
+}
+
+.form-control {
+  display: flex;
+  justify-content: center;
+}
+
+.grocery {
+  width: 100%;
+  padding: 0.25rem;
+  padding-left: 1rem;
+  flex-direction: 1 0 auto;
+  font-size: 0.9rem;
+  outline: none;
+  border: 1px solid rgb(226, 211, 211);
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+}
+
+.grocery::placeholder {
+  letter-spacing: 1.3px;
+}
+
+.submit-btn {
+  flex: 0 0 5rem;
+  outline: none;
+  border: 1px solid rgb(226, 211, 211);
+
+  padding: 0.25rem;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  cursor: pointer;
+  display: grid;
+  align-items: center;
+  transition: all 0.3s ease;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+
+.grocery-container {
+  margin: 15px 0;
+}
+
+.grocery-item {
+  display: flex;
+
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 0.5rem 1rem;
+  color: rgb(104, 91, 91);
+  font-weight: 500;
+  border-radius: 2px;
+}
+
+.btn-container {
+  display: flex;
+  align-items: center;
+
+  gap: 10px;
+}
+
+.edit-btn {
+  color: rgb(114, 87, 36);
+}
+
+.edit-btn,
+.delete-btn {
+  border: none;
+  font-size: 17px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-color: transparent;
+}
+
+.edit-btn:hover,
+.delete-btn:hover {
+  opacity: 0.7;
+}
+
+.clear-btn {
+  width: 10rem;
+  height: 1.5rem;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  display: grid;
+  align-items: center;
+  margin: 0 auto;
+  cursor: pointer;
+  margin-top: 1.25rem;
+ 
+  font-size: 0.9rem;
+  letter-spacing: 1px;
+  color: rgb(138, 158, 165);
+  transition: all 0.3s ease;
+}
+
+.alert{
+  margin-bottom: 1rem;
+  height: 1.25rem;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  font-size: 0.8rem;
+  border-radius: 0.25rem;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+}
+
+.alert-danger {
+  color: #721c24;
+  background: #f8d7da;
+}
+.alert-success {
+  color: #155724;
+  background: #d4edda;
+}
+
+.clear-btn:hover{
+  color: rgb(64, 74, 78);
 }
